--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ button:hover {
     background-color: #007bb5;
 }
 
-.footer {
+footer {
     text-align: center;
     padding: 15px;
     background-color: #333;
